# telegram-news-insights

./: .gitignore  README.md  pyproject.toml
config/: sources.example.yaml  sources.yaml
deploy/: bootstrap_ubuntu.sh
deploy/systemd/: README.md  news-digest-bot.service  news-digest-collect.service  news-digest-collect.timer
docs/: PRODUCTION.md
src/news_digest_bot/: __init__.py  bot.py  cli.py  config.py  digest.py  doctor.py  llm.py  models.py  modes.py  pipeline.py  report.py  sender.py  storage.py  telegram_addlist.py  telegram_format.py  telegraph.py
src/news_digest_bot/collectors/: __init__.py  reddit.py  telegram.py  twitter.py
tests/: test_bot.py  test_config.py  test_digest.py  test_doctor.py  test_modes.py  test_pipeline.py  test_report.py  test_sender.py  test_storage.py  test_telegram_addlist.py  test_telegram_format.py  test_telegram_web.py  test_telegraph.py
