[project]
name = "news-digest-bot"
version = "0.1.0"
description = "Telegram/Reddit news digest bot with DeepSeek summaries."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "praw>=7.7.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "telethon>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
news-digest = "news_digest_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
